--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
   "name": "ui-icons",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Icons for UI",
   "main": "./lib/index.js",
   "private": true,
-  "repository": "https://github.com/getmepass/ui-icons",
+  "repository" : {
+    "type": "git",
+    "url": "ssh://git@github.com/getmepass/ui-icons.git"
+  },
   "scripts": {
     "build": "yarn clean && gulp && yarn build:icon-component && yarn build:compile",
     "build:icon-component": "svgr --template template.js lib/ui_icons_svgs --out-dir lib/ui_icons && node scripts/build_index.js",
     "build:compile": "BABEL_ENV=esm yarn babel lib --out-dir es && BABEL_ENV=node yarn babel lib --out-dir lib",
-    "clean": "rimraf lib es"
+    "clean": "rimraf lib es",
+    "deploy": "yarn publish"
   },
   "devDependencies": {
     "@babel/cli": "7.5.5",
