--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "name": "ui-icons",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Icons for UI",
   "main": "./lib/index.js",
-  "private": true,
   "repository" : {
     "type": "git",
     "url": "ssh://git@github.com/getmepass/ui-icons.git"
@@ -13,12 +12,12 @@
     "build:icon-component": "svgr --template template.js lib/ui_icons_svgs --out-dir lib/ui_icons && node scripts/build_index.js",
     "build:compile": "BABEL_ENV=esm yarn babel lib --out-dir es && BABEL_ENV=node yarn babel lib --out-dir lib",
     "clean": "rimraf lib es",
-    "deploy": "yarn publish"
+    "deploy": "npm publish"
   },
   "devDependencies": {
     "@babel/cli": "7.5.5",
     "@babel/core": "7.5.5",
-    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-react": "7.0.0",
     "@svgr/babel-plugin-add-jsx-attribute": "4.2.0",
     "@svgr/cli": "4.3.2",
     "@svgr/plugin-jsx": "4.3.2",
