--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,5 @@
 //npm.pkg.github.com/:_authToken=db07afdd3919f9b1cc1be4995de7060d46a0acae
 email=ksangam68@gmail.com
 always-auth=true
+username=sangamcse
 @sangamcse:registry=https://npm.pkg.github.com/
