--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@sangamcse/ui-icons",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Icons for UI",
-  "main": "./lib/index.js",
+  "main": "./lib",
   "repository" : {
     "type": "git",
     "url": "ssh://git@github.com/sangamcse/ui-icons.git"
@@ -12,7 +12,8 @@
     "build:icon-component": "svgr --template template.js lib/ui_icons_svgs --out-dir lib/ui_icons && node scripts/build_index.js",
     "build:compile": "BABEL_ENV=esm yarn babel lib --out-dir es && BABEL_ENV=node yarn babel lib --out-dir lib",
     "clean": "rimraf lib es",
-    "deploy": "npm publish"
+    "clean:src": "rimraf scripts src",
+    "deploy": "yarn clean:src && npm publish"
   },
   "devDependencies": {
     "@babel/cli": "7.5.5",
