--- a/package.json
+++ b/package.json
@@ -1,19 +1,22 @@
 {
   "name": "@sangamcse/ui-icons",
-  "version": "1.0.0",
+  "version": "1.0.0-alpha",
   "description": "Icons for UI",
   "license": "WTFPL",
   "main": "./lib/ui_icons",
   "repository": {
     "type": "git",
-    "url": "ssh://git@github.com/sangamcse/ui-icons.git"
+    "url": "git+https://github.com/sangamcse/ui-icons.git"
+  },
+  "engines": {
+    "node": "8.17.0"
   },
   "scripts": {
     "build": "yarn clean && gulp && yarn build:icon-component && yarn build:compile",
-    "build:icon-component": "svgr --template template.js lib/ui_icons_svgs --out-dir lib/ui_icons && node scripts/build_index.js",
+    "build:icon-component": "yarn svgr --template template.js lib/ui_icons_svgs --out-dir lib/ui_icons && node scripts/build_index.js",
     "build:compile": "BABEL_ENV=esm yarn babel lib --out-dir es && BABEL_ENV=node yarn babel lib --out-dir lib",
-    "clean": "rimraf lib es",
-    "clean:src": "rimraf scripts src gulpfile.js README.md template.js .svgrrc .npmignore .travis.yml",
+    "clean": "yarn rimraf lib es",
+    "clean:src": "yarn rimraf scripts src gulpfile.js README.md template.js .svgrrc .npmignore .github",
     "deploy": "yarn clean:src && npm publish"
   },
   "devDependencies": {
